# navigation_amcl_apriltag

amcl/: CMakeLists.txt  package.xml
amcl/cfg/: AMCL.cfg
amcl/examples/: amcl_with_fiducials.launch
amcl/include/amcl/pf/: pf.h
amcl/include/amcl/sensors/: amcl_fiducial.h  amcl_laser.h
amcl/src/: amcl_node.cpp
amcl/src/amcl/pf/: pf.c
amcl/src/amcl/sensors/: amcl_fiducial.cpp  amcl_laser.cpp
fiducial_detector/: CMakeLists.txt  package.xml
fiducial_detector/include/: LandmarkPreprocessor.h
fiducial_detector/launch/: fiducial_camera_and_detector.launch  fiducial_detectors_landmarks_preprocessor.launch  landmark_preprocessor.launch
fiducial_detector/maps/: sample_map.yaml
fiducial_detector/msg/: AprilTag.msg  AprilTagList.msg  LandmarkDetection.msg  LandmarkDetectionArray.msg
fiducial_detector/src/: FiducialDetectionNode.cpp  LandmarkPreprocessor.cpp  LandmarkPreprocessorNode.cpp
